--- a/Todo-List/index.html
+++ b/Todo-List/index.html
@@ -6,14 +6,13 @@
     <!--link to the css file-->
     <link rel="stylesheet" href="style.css">
 </head>
-<div class=""root">
-    grandparent
+<body>
     <div class="container">
-        <div class="children">child1</div>
-        <div class="children2">child2</div>
-        <div class="children3">child3</div>
+        <div class="todo-app">
+            <h2>To-Do List</h2>
+        </div>
     </div>
-</div>
+</body>
 </html>
 
 <script src="script.js">
