todoList-layout-complete | *Learn before selector

--- a/Todo-List/index.html
+++ b/Todo-List/index.html
@@ -10,6 +10,15 @@
     <div class="container">
         <div class="todo-app">
             <h2>To-Do List</h2>
+            <div class="row">
+                <input type="text">
+            <button id="add-button">Add</button>
+            </div>
+            <ul class="todo-list">
+                <li class="todo-item">Create a JavaScript project</li>
+                <li class="todo-item">Upload it online</li>
+                <li class="todo-item">Add project link in the resume</li>
+            </ul>
         </div>
     </div>
 </body>
