--- a/Todo-List/index.html
+++ b/Todo-List/index.html
@@ -5,16 +5,18 @@
     <title>Todo List</title>
     <!--link to the css file-->
     <link rel="stylesheet" href="style.css">
+    
+    
 </head>
 <body>
     <div class="container">
         <div class="todo-app">
             <h2>To-Do List</h2>
             <div class="row">
-                <input type="text">
-            <button id="add-button">Add</button>
+                <input type="text" data-input>
+            <button id="add-button" data-button>Add</button>
             </div>
-            <ul class="todo-list">
+            <ul class="todo-list" data-item-container>
                 <li class="todo-item">Create a JavaScript project</li>
                 <li class="todo-item">Upload it online</li>
                 <li class="todo-item">Add project link in the resume</li>
@@ -22,7 +24,6 @@
         </div>
     </div>
 </body>
-</html>
-
 <script src="script.js">
 </script>
+</html>
