render() func completed | addTodo() func completed

--- a/Todo-List/index.html
+++ b/Todo-List/index.html
@@ -14,12 +14,12 @@
             <h2>To-Do List</h2>
             <div class="row">
                 <input type="text" data-input>
-            <button id="add-button" data-button>Add</button>
+            <button onclick="addTodo()" id="add-button" data-button>Add</button>
             </div>
-            <ul class="todo-list" data-item-container>
-                <li class="todo-item">Create a JavaScript project</li>
+            <ul class="todo-list" data-list-container>
+                <!-- <li class="todo-item checked">Create a JavaScript project</li>
                 <li class="todo-item">Upload it online</li>
-                <li class="todo-item">Add project link in the resume</li>
+                <li class="todo-item">Add project link in the resume</li> -->
             </ul>
         </div>
     </div>
