--- a/CSS-Flex&Grid/grid.html
+++ b/CSS-Flex&Grid/grid.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="flex.css">
+  <link rel="stylesheet" href="grid.css">
   <title>Flexbox Gallery</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
     </div>
     <div class="image">
         <img src="image1.jpg" alt="Image 1">
-        <h3 style="display: inline;">Image 3</h3>
+        <h3>Image 3</h3>
     </div>
     <div class="image">
         <img src="image1.jpg" alt="Image 1">
