--- a/Autocomplete/index.html
+++ b/Autocomplete/index.html
@@ -1,29 +1,28 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script defer src="scripts.js"></script>
     <title>Autocomplete Example</title>
 </head>
 <body>
     <div class="autocomplete">
-        <input type="text" id="autocomplete-input" placeholder="Type something">
-        <ul id="autocomplete-list">
-            <li>123</li>
-        </ul>
+      <input id="auto-complete-input" type="text" placeholder="type something...">
+      <ul id="auto-complete-list">
+      </ul>
     </div>
 
-    <script src="script.js"></script>
 </body>
 </html>
--->
-<!DOCTYPE html>
+<!-- <! <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <script defer src="scripts.js"></script>
     <title>Autocomplete Example</title>
   </head>
   <body>
@@ -35,6 +34,5 @@
       />
       <ul id="list-container"></ul>
     </div>
-    <script src="scripts.js"></script>
   </body>
-</html>
+</html> --> 
