e.target.parentElement.remove() and cache-like localstorage

--- a/Center+EasyTodo/index.html
+++ b/Center+EasyTodo/index.html
@@ -31,15 +31,13 @@
       ------ -----DOM TodoList----- ----- -----
     </h1>
     <h2>Easy todo List</h2>
-    <input type="text" id="add-to-do" />
-    <button add-btn>Add new todo</button>
-    <div>
-      <ul id="list-container">
-        <li class="list-item checked">mock data1</li>
-        <li class="list-item">mock data2</li>
-        <li>mock data3</li>
-      </ul>
-    </div>
+    <input type="text" placeholder="Add to do..." id="todo-input">
+    <button id="add-btn">Add to do</button>
+    <ul id="list-container">
+      <li class="checked">Offer from Yahoo</li>
+      <li>Have a good day</li>
+      <li>Wish all you guys happy new year!</li>
+    </ul>
   </body>
   <script src="script.js"></script>
 </html>
